Fix bug where FormPost and Post image buttons would be the same colour as their backgrounds and thus invisible when in light theme.

--- a/src/client/scss/components/_FormPost.scss
+++ b/src/client/scss/components/_FormPost.scss
@@ -70,7 +70,7 @@
 		cursor: pointer;
 
 		svg {
-			fill: darken($accent-pink, 18%);
+			fill: darken($accent-pink, 15%);
 			width: 100%;
 			height: 100%;
 
@@ -113,7 +113,7 @@
 
 		background: rgba(0, 0, 0, .7);
 		font-size: .8rem;
-		color: $text-bright;
+		color: #F0F0F0;
 		border-radius: 50%;
 
 		cursor: pointer;
