--- a/src/client/scss/components/_Post.scss
+++ b/src/client/scss/components/_Post.scss
@@ -172,7 +172,7 @@
 			svg {
 				width: 100%;
 				height: 100%;
-				fill: $text-bright;
+				fill: #F0F0F0;
 
 				path {
 					fill: inherit;
